# blackmirror

./: .gitignore  README.md  blackmirror.gresource.xml  blackmirror.in  io.github.kriptolix.BlackMirror.json  meson.build
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fk_2FProjetos_2Fblackmirror_2Fio.github.kriptolix.BlackMirror.json/: init
.flatpak/flatpak-builder/checksums/: x86_64-io.github.kriptolix.BlackMirror.json
data/: io.github.kriptolix.BlackMirror.desktop.in  io.github.kriptolix.BlackMirror.gschema.xml  io.github.kriptolix.BlackMirror.metainfo.xml.in  io.github.kriptolix.BlackMirror.service.in  meson.build
data/dataset/kyoto/ptBR/: weather.yaml
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.py  exemple.yaml  weather.py
src/gtk/ui/: ControllWindow.ui  Device.ui  MainWindow.ui
src/gtk/widgets/: mainwindow.py
src/references/: npc_traits.csv  weather.js
